--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
 
 #  medium: yourname
 #  reddit: yourname
-linkedin: yann-clerc
+  linkedin: yann-clerc
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -75,7 +75,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "yclerc.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
